--- a/spring-shoppingmall/src/main/resources/application.properties
+++ b/spring-shoppingmall/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=tester
 spring.datasource.password=1
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
